// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsentManager /> renders correctly when no cookie is set (destinations = newDestinations) 1`] = `
<Fragment>
  <LoadableComponent
    close={[Function]}
    footer={
      <Footer
        handleCancel={[Function]}
        handleCancelBack={[Function]}
        handleCancelConfirm={[Function]}
        handleSave={[Function]}
        isCancelling={false}
        validate={[Function]}
      />
    }
    header={
      <FormattedMessage
        defaultMessage="Your cookie preferences"
        id="app.components.ConsentManager.Modal.PreferencesDialog.title"
      />
    }
    label="Your cookie preferences"
    opened={false}
  >
    <PreferencesDialog
      advertising={null}
      analytics={null}
      categoryDestinations={
        Object {
          "advertising": Array [
            Object {
              "category": "Advertising",
              "description": "Advertising BS",
              "id": "AdvertisingTool",
              "name": "AdvertisingTool",
              "website": "http://random.com/advertising",
            },
          ],
          "analytics": Array [
            Object {
              "category": "Analytics",
              "description": "Google Analytics is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
              "id": "Google Analytics",
              "name": "Google Analytics",
              "website": "http://google.com/analytics",
            },
            Object {
              "category": "Tag Managers",
              "description": "MarketingTool is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
              "id": "MarketingTool",
              "name": "MarketingTool",
              "website": "http://random.com/marketing",
            },
          ],
          "functional": Array [
            Object {
              "category": "Security & Fraud",
              "description": "Actually might be handy",
              "id": "FunctionalTool",
              "name": "FunctionalTool",
              "website": "http://random.com/securitycookie",
            },
          ],
        }
      }
      functional={null}
      onChange={[Function]}
    />
  </LoadableComponent>
  <Banner
    onAccept={[Function]}
    onChangePreferences={[Function]}
  />
</Fragment>
`;

exports[`<ConsentManager /> renders correctly when there is no new destination 1`] = `
<Fragment>
  <LoadableComponent
    close={[Function]}
    footer={
      <Footer
        handleCancel={[Function]}
        handleCancelBack={[Function]}
        handleCancelConfirm={[Function]}
        handleSave={[Function]}
        isCancelling={false}
        validate={[Function]}
      />
    }
    header={
      <FormattedMessage
        defaultMessage="Your cookie preferences"
        id="app.components.ConsentManager.Modal.PreferencesDialog.title"
      />
    }
    label="Your cookie preferences"
    opened={false}
  >
    <PreferencesDialog
      advertising={true}
      analytics={false}
      categoryDestinations={
        Object {
          "advertising": Array [
            Object {
              "category": "Advertising",
              "description": "Advertising BS",
              "id": "AdvertisingTool",
              "name": "AdvertisingTool",
              "website": "http://random.com/advertising",
            },
          ],
          "analytics": Array [
            Object {
              "category": "Analytics",
              "description": "Google Analytics is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
              "id": "Google Analytics",
              "name": "Google Analytics",
              "website": "http://google.com/analytics",
            },
            Object {
              "category": "Tag Managers",
              "description": "MarketingTool is the most popular marketing tool for the web. It’s free and provides a wide range of features. It’s especially good at measuring traffic sources and ad campaigns.",
              "id": "MarketingTool",
              "name": "MarketingTool",
              "website": "http://random.com/marketing",
            },
          ],
          "functional": Array [
            Object {
              "category": "Security & Fraud",
              "description": "Actually might be handy",
              "id": "FunctionalTool",
              "name": "FunctionalTool",
              "website": "http://random.com/securitycookie",
            },
          ],
        }
      }
      functional={false}
      onChange={[Function]}
    />
  </LoadableComponent>
</Fragment>
`;

exports[`<ConsentManager /> renders correctly when there is no tracking destination 1`] = `
<Fragment>
  <LoadableComponent
    close={[Function]}
    footer={
      <Footer
        handleCancel={[Function]}
        handleCancelBack={[Function]}
        handleCancelConfirm={[Function]}
        handleSave={[Function]}
        isCancelling={false}
        validate={[Function]}
      />
    }
    header={
      <FormattedMessage
        defaultMessage="Your cookie preferences"
        id="app.components.ConsentManager.Modal.PreferencesDialog.title"
      />
    }
    label="Your cookie preferences"
    opened={false}
  >
    <PreferencesDialog
      advertising={null}
      analytics={null}
      categoryDestinations={
        Object {
          "advertising": Array [],
          "analytics": Array [],
          "functional": Array [],
        }
      }
      functional={null}
      onChange={[Function]}
    />
  </LoadableComponent>
</Fragment>
`;
